Fixed white space on the bottom of the page when resizing from low res.

--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -6,7 +6,7 @@
   justify-content: flex-start;
   align-items: center;
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: greyscale;
   text-rendering: optimizeLegibility;
